--- a/src/Reserva/ReservaAuditorio.css
+++ b/src/Reserva/ReservaAuditorio.css
@@ -1,402 +1,596 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-.reserva-container {
-  display: flex;
-  overflow: hidden;
-  flex-direction: column;
-  background-color: #f4f4f5;
+:root {
+  --shape-corner-full: 1000px;
 }
 
-.reservas-title {
-  align-self: flex-end;
-  margin-top: 1rem;
-  margin-right: 6rem;
-  font-size: 1.25rem;
-  color: #0f172a;
-}
-
-.main-content {
+.reserva {
+  background-color: #f2f2f2;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding-left: 5rem;
-  padding-right: 5rem;
-  margin-top: 1rem;
+  flex-direction: row;
+  justify-content: center;
   width: 100%;
 }
 
-.space-info-section {
-  max-width: 100%;
-  width: 867px;
-}
-
-.space-info-grid {
-  display: flex;
-  gap: 1.25rem;
-}
-
-.space-image-column {
-  width: 50%;
-}
-
-.space-image-container {
-  display: flex;
+.reserva .div {
+  background-color: #f2f2f2;
+  height: 1309px;
   overflow: hidden;
   position: relative;
-  flex-direction: column;
-  flex-grow: 1;
-  justify-content: center;
-  padding: 0.625rem;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  aspect-ratio: 1.393;
+  width: 1500px;
 }
 
-.space-background-image {
+.reserva .overlap {
+  height: 914px;
+  left: -1px;
+  position: absolute;
+  top: 0;
+  width: 1501px;
+}
+
+.reserva .text-wrapper {
+  color: #030027;
+  font-family: "Hammersmith One", Helvetica;
+  font-size: 20px;
+  font-weight: 400;
+  left: 1324px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 182px;
+}
+
+.reserva .overlap-group {
+  height: 736px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 1501px;
+}
+
+.reserva .group {
+  background-color: #f4f4f4;
+  height: 144px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 1500px;
+}
+
+.reserva .frame {
+  height: 47px;
+  left: 1354px;
+  position: absolute;
+  top: 48px;
+  width: 47px;
+}
+
+.reserva .image {
+  height: 142px;
+  left: 45px;
   object-fit: cover;
   position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
+  top: 0;
+  width: 142px;
 }
 
-.space-main-image {
-  object-fit: contain;
-  z-index: 10;
-  width: 100%;
-  border-radius: 1.5rem;
-  background-blend-mode: normal;
-  aspect-ratio: 1.3;
+.reserva .menu {
+  height: 53px !important;
+  left: 1411px !important;
+  position: absolute !important;
+  top: 45px !important;
+  width: 46px !important;
 }
 
-.space-details-column {
-  margin-left: 1.25rem;
-  width: 50%;
+.reserva .rectangle {
+  background-color: #ffffff;
+  border-radius: 28.5px;
+  height: 47px;
+  left: 480px;
+  position: absolute;
+  top: 689px;
+  width: 316px;
 }
 
-.space-details {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  align-self: stretch;
-  margin: auto 0;
-  color: #0f172a;
-}
-
-.space-type {
-  font-size: 0.75rem;
-  color: #52525b;
-}
-
-.space-name {
-  margin-top: 0.25rem;
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-
-.center-name {
-  align-self: stretch;
-  margin-top: 0.625rem;
-  font-size: 3rem;
-  font-weight: 900;
-  transform: rotate(4.671684489127985e-19rad);
-}
-
-.booking-section {
-  align-self: flex-end;
-  margin-top: 2.5rem;
-  width: 100%;
-  max-width: 1310px;
-}
-
-.booking-grid {
-  display: flex;
-  gap: 1.25rem;
-}
-
-.form-column {
-  width: 57%;
-}
-
-.booking-form {
-  display: flex;
-  flex-direction: column;
-  margin-top: 1.75rem;
-  width: 100%;
-  font-size: 1.25rem;
-}
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-}
-
-.form-label {
-  align-self: flex-start;
-  margin-left: 0.875rem;
-  font-weight: 600;
-  color: #0f172a;
-}
-
-.form-input {
-  padding: 0.875rem 1.25rem;
-  margin-top: 0.75rem;
-  background-color: white;
-  border-radius: 29px;
-  color: #d4d4d8;
-}
-
-.form-row {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 2.5rem;
-  margin-top: 2.5rem;
-}
-
-.form-group-half {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  flex-grow: 1;
-  flex-shrink: 0;
-  white-space: nowrap;
-  flex-basis: 0;
-  width: fit-content;
-}
-
-.form-input-with-icon {
-  display: flex;
-  gap: 1.25rem;
-  justify-content: space-between;
-  padding: 0.75rem 1.25rem;
-  margin-top: 0.5rem;
-  background-color: white;
-  border-radius: 29px;
-  color: #d4d4d8;
-}
-
-.input-icon {
-  object-fit: contain;
-  flex-shrink: 0;
-  aspect-ratio: 0.92;
-  width: 23px;
-}
-
-.input-icon-time {
-  object-fit: contain;
-  flex-shrink: 0;
-  aspect-ratio: 1;
+.reserva .img {
+  height: 25px;
+  left: 751px;
+  position: absolute;
+  top: 700px;
   width: 25px;
 }
 
-.checkout-column {
-  margin-left: 1.25rem;
-  width: 43%;
+.reserva .rectangle-2 {
+  background-color: #ffffff;
+  border-radius: 28.5px;
+  height: 47px;
+  left: 120px;
+  position: absolute;
+  top: 580px;
+  width: 676px;
 }
 
-.checkout-container {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
+.reserva .text-wrapper-2 {
+  color: #d1d1d1;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 400;
+  left: 140px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 593px;
+  white-space: nowrap;
+  width: 256px;
+}
+
+.reserva .text-wrapper-3 {
+  color: #030027;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 600;
+  left: 493px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 666px;
+  white-space: nowrap;
+  width: 70px;
+}
+
+.reserva .p {
+  color: #d1d1d1;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 400;
+  left: 500px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 701px;
+  white-space: nowrap;
+  width: 210px;
+}
+
+.reserva .background {
+  height: 1359px;
+  left: 550px;
+  position: absolute;
+  top: -324px;
+  transform: rotate(-90deg);
+  width: 262px;
+}
+
+.reserva .overlap-group-2 {
+  height: 1359px;
+  position: relative;
+}
+
+.reserva .plate {
+  background: linear-gradient(
+    180deg,
+    rgba(238, 93, 8, 1) 0%,
+    rgba(240, 243, 255, 0) 100%
+  );
+  height: 1359px;
+  left: 14px;
+  position: absolute;
+  top: 0;
+  width: 233px;
+}
+
+.reserva .shared-dot-pattern {
+  height: 262px !important;
+  left: -52px !important;
+  position: absolute !important;
+  top: 137px !important;
+  transform: rotate(90deg) !important;
+  width: 365px !important;
+}
+
+.reserva .laboratorio {
+  color: #030027;
+  font-family: "Roboto", Helvetica;
+  font-size: 24px;
+  font-weight: 600;
+  left: 573px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 300px;
+}
+
+.reserva .text-wrapper-4 {
+  color: #5e5e5e;
+  font-family: "Roboto", Helvetica;
+  font-size: 11px;
+  font-weight: 400;
+  left: 574px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 283px;
   white-space: nowrap;
 }
 
-.checkout-card {
-  display: flex;
-  flex-direction: column;
-  padding: 2.5rem 4rem 1rem;
-  width: 100%;
-  font-size: 1.25rem;
-  background-color: white;
+.reserva .text-wrapper-5 {
+  color: #030027;
+  font-family: "Roboto", Helvetica;
+  font-size: 52px;
+  font-weight: 900;
+  left: 573px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 365px;
+  white-space: nowrap;
+}
+
+.reserva .rectangle-3 {
+  background-color: #f5f5f5;
+  box-shadow: 0px 4px 10px #00000026;
+  height: 166px;
+  left: 1px;
+  position: absolute;
+  top: 0;
+  width: 1500px;
+}
+
+.reserva .image-2 {
+  height: 172px;
+  left: 134px;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  width: 177px;
+}
+
+.reserva .menu-2 {
+  height: 53px !important;
+  left: 1340px !important;
+  position: absolute !important;
+  top: 56px !important;
+  width: 46px !important;
+}
+
+.reserva .vector-wrapper {
+  height: 47px;
+  left: 1286px;
+  position: absolute;
+  top: 59px;
+  width: 47px;
+}
+
+.reserva .vector {
+  height: 31px;
+  left: 8px;
+  position: absolute;
+  top: 8px;
+  width: 31px;
+}
+
+.reserva .text-wrapper-6 {
+  color: #030027;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 600;
+  left: 133px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 553px;
+  white-space: nowrap;
+  width: 180px;
+}
+
+.reserva .overlap-2 {
+  background-color: #ffffff;
+  border-radius: 28.5px;
+  height: 47px;
+  left: 120px;
+  position: absolute;
+  top: 689px;
+  width: 316px;
+}
+
+.reserva .frame-2 {
+  height: 25px;
+  left: 273px;
+  position: absolute;
+  top: 11px;
+  width: 23px;
+}
+
+.reserva .text-wrapper-7 {
+  color: #d1d1d1;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 400;
+  left: 20px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 12px;
+  white-space: nowrap;
+  width: 119px;
+}
+
+.reserva .text-wrapper-8 {
+  color: #030027;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 600;
+  left: 133px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 666px;
+  white-space: nowrap;
+  width: 71px;
+}
+
+.reserva .overlap-3 {
+  background-color: #ffffff;
   border-radius: 59px;
+  height: 389px;
+  left: 924px;
+  position: absolute;
+  top: 525px;
+  width: 506px;
 }
 
-.checkout-content {
-  display: flex;
-  flex-direction: column;
+.reserva .overlap-4 {
+  height: 158px;
+  left: 54px;
+  position: absolute;
+  top: 214px;
+  width: 398px;
 }
 
-.checkout-row {
-  display: flex;
-  gap: 2.5rem;
+.reserva .overlap-5 {
+  height: 158px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 398px;
 }
 
-.checkout-labels {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  font-weight: 500;
-  color: black;
-}
-
-.checkout-title {
-  margin-right: 0.5rem;
-}
-
-.checkout-item {
-  align-self: flex-start;
-  margin-top: 1.25rem;
-  color: #737373;
-}
-
-.checkout-item:nth-child(3) {
-  margin-top: 1.5rem;
-}
-
-.checkout-total-label {
-  align-self: flex-start;
-  margin-top: 2.5rem;
-  font-weight: 700;
-}
-
-.checkout-values {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  align-self: flex-end;
-  margin-top: 2.75rem;
-  color: #737373;
-}
-
-.checkout-value {
-  margin-left: 0.125rem;
-}
-
-.checkout-value:nth-child(2) {
-  align-self: flex-end;
-  margin-top: 1rem;
-}
-
-.checkout-total-value {
-  margin-top: 1.75rem;
-  font-weight: 700;
-  color: black;
-}
-
-.payment-methods {
-  object-fit: contain;
-  align-self: center;
-  margin-top: 0.75rem;
-  margin-left: 0.875rem;
-  max-width: 100%;
-  aspect-ratio: 1.79;
+.reserva .image-3 {
+  height: 158px;
+  left: 71px;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
   width: 282px;
 }
 
-.pay-button {
-  align-self: center;
-  padding: 0.5rem 4rem 0.875rem;
-  margin-top: 0.625rem;
-  max-width: 100%;
-  font-size: 1.5rem;
-  font-weight: 700;
-  color: white;
-  background-color: #0f172a;
-  border-radius: 1000px;
-  width: 268px;
-  text-align: center;
-  cursor: pointer;
+.reserva .line {
+  height: 1px;
+  left: 0;
+  object-fit: cover;
+  position: absolute;
+  top: 16px;
+  width: 398px;
 }
 
-.breadcrumb {
-  display: flex;
-  gap: 0.375rem;
-  margin-top: 3rem;
-  margin-left: 2.25rem;
-  font-size: 1rem;
-  font-weight: 700;
-  color: black;
+.reserva .line-2 {
+  height: 1px;
+  left: 4px;
+  object-fit: cover;
+  position: absolute;
+  top: 141px;
+  width: 394px;
+}
+
+.reserva .ellipse-wrapper {
+  background-color: #009cda;
+  border-radius: 10px;
+  height: 20px;
+  left: 33px;
+  position: absolute;
+  top: 70px;
+  width: 20px;
+}
+
+.reserva .ellipse {
+  background-color: #ffffff;
+  border-radius: 7px;
+  height: 14px;
+  left: 3px;
+  position: relative;
+  top: 3px;
+  width: 14px;
+}
+
+.reserva .text-wrapper-9 {
+  color: #000000;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 500;
+  left: 66px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 40px;
   white-space: nowrap;
 }
 
-.breadcrumb-icon {
-  object-fit: contain;
-  flex-shrink: 0;
-  width: 1.5rem;
-  aspect-ratio: 1;
+.reserva .text-wrapper-10 {
+  color: #736f6f;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 500;
+  left: 66px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 83px;
+  white-space: nowrap;
+  width: 95px;
 }
 
-.breadcrumb-text {
-  margin: auto 0;
+.reserva .text-wrapper-11 {
+  color: #736f6f;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 500;
+  left: 66px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 122px;
+  width: 95px;
 }
 
+.reserva .text-wrapper-12 {
+  color: #000000;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 700;
+  left: 69px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 178px;
+  white-space: nowrap;
+}
 
-/* Responsive Design */
-@media (max-width: 768px) {
-  .header-content {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-  }
+.reserva .text-wrapper-13 {
+  color: #736f6f;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 400;
+  left: 357px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 84px;
+  white-space: nowrap;
+}
 
-  .reservas-title {
-    margin-right: 0.625rem;
-  }
+.reserva .text-wrapper-14 {
+  color: #736f6f;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 400;
+  left: 379px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 124px;
+  white-space: nowrap;
+}
 
-  .main-content {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-  }
+.reserva .text-wrapper-15 {
+  color: #000000;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 700;
+  left: 355px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 175px;
+  white-space: nowrap;
+}
 
-  .space-info-grid {
-    flex-direction: column;
-  }
+.reserva .laboratorio-realidad {
+  height: 262px;
+  left: 96px;
+  object-fit: cover;
+  position: absolute;
+  top: 226px;
+  width: 340px;
+}
 
-  .space-image-column,
-  .space-details-column {
-    margin-left: 0;
-    width: 100%;
-  }
-  .space-image-container {
-    margin-top: 2.5rem;
-  }
+.reserva .copyright-wrapper {
+  background-image: url(https://c.animaapp.com/au2TV8DS/img/rectangle-67.svg);
+  background-size: 100% 100%;
+  height: 209px;
+  left: 0;
+  position: absolute;
+  top: 1100px;
+  width: 1500px;
+}
 
-  .space-details {
-    margin-top: 2.5rem;
-  }
+.reserva .copyright {
+  color: #ffffff;
+  font-family: "Inter", Helvetica;
+  font-size: 20px;
+  font-weight: 400;
+  left: 377px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 97px;
+  white-space: nowrap;
+  width: 752px;
+}
 
-  .center-name {
-    font-size: 2.25rem;
-  }
+.reserva .span {
+  color: #ffffff;
+  font-family: "Inter", Helvetica;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 0;
+}
 
-  .booking-grid {
-    flex-direction: column;
-  }
+.reserva .text-wrapper-16 {
+  font-weight: 700;
+}
 
-  .form-column,
-  .checkout-column {
-    margin-left: 0;
-    width: 100%;
-  }
+.reserva .overlap-6 {
+  border-radius: 1000px;
+  height: 44px;
+  left: 1037px;
+  position: absolute;
+  top: 924px;
+  width: 268px;
+}
 
-  .booking-form {
-    margin-top: 2.5rem;
-  }
-  .checkout-container {
-    margin-top: 2.5rem;
-  }
+.reserva .rectangle-4 {
+  background-color: #030027;
+  border-radius: var(--shape-corner-full);
+  height: 44px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 268px;
+}
 
-  .checkout-card {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-  }
+.reserva .text-wrapper-17 {
+  color: #ffffff;
+  font-family: "Roboto", Helvetica;
+  font-size: 24px;
+  font-weight: 700;
+  left: 101px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 7px;
+  white-space: nowrap;
+  width: 66px;
+}
 
-  .pay-button {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-  }
+.reserva .text-wrapper-18 {
+  color: #000000;
+  font-family: "Inter", Helvetica;
+  font-size: 16px;
+  font-weight: 700;
+  height: 42px;
+  left: 149px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 1008px;
+  width: 48px;
+}
 
-  .breadcrumb {
-    margin-top: 2.5rem;
-    margin-left: 0.625rem;
-  }
-
-  .footer {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-    margin-top: 2.5rem;
-  }
-
-  .booking-section {
-    max-width: 100%;
-  }
+.reserva .frame-3 {
+  height: 24px;
+  left: 119px;
+  position: absolute;
+  top: 1018px;
+  width: 24px;
 }
