--- a/src/VerEspacio/VerAuditorio.css
+++ b/src/VerEspacio/VerAuditorio.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Hammersmith+One:400|Roboto:400,700,600|Inter:400,700");
+
 .container {
   overflow-x: hidden;
   position: relative;
@@ -91,6 +93,7 @@
   text-align: center;
   color: white;
   transform: translate(-50%, -50%);
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
 }
 
 .contentSection {
@@ -125,6 +128,7 @@
   line-height: 1.375;
   color: white;
   width: 632px;
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
 }
 
 .darkTextContent {
@@ -161,6 +165,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
 }
 
 .reserveButtonInner:hover {
@@ -187,6 +192,7 @@
   line-height: 1.5rem;
   font-weight: 700;
   color: black;
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
 }
 
 .footer {
